se corrigieron errores en el contenido

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="flex direction-column align-baseline justify-center">
                 <h1 class="title">Tus pagos rápidos y efectivos</h1>
                 <p class="slogan">Comprar productos en la institución nunca había sido tan fácil</p>
-                <button class="download-button button">DESCARGA LA APP</button>
+                <button class="download-button button">DESCARGA YA LA APP</button>
             </div>
             <img class="card-image column-start-2" src="Media/Ullet Card.png" alt="Ullet Card">
         </div>
@@ -43,7 +43,7 @@
                     <label for="">Contraseña</label>
                     <input type="text">
                     <button class="button submit-button">REGISTRARSE</button>
-                    <p class="login-text">o ingresa usando</p>
+                    <p class="login-text">O ingresa usando</p>
                     <img class="microsoft-icon" src="Media/microsoft.png" alt="microsoft">
                 </form>
             </div>
