--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="" class="flex-grow">
                 <img src="Media/Logo.svg" alt="Logo Ullet">
             </a>
-            <a href="sesion.html">INGRESAR Daniel Ver</a>
+            <a href="sesion.html">INGRESAR</a>
             <button class="button" onclick="showLoginWindow()">CREAR CUENTA</button>
         </nav>
 
